# MapReduce-RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: basic_sequential.yaml  default.yaml  mapreduce_parallel.yaml
data/samples/: mini_corpus.txt
src/rag_mapreduce/: __init__.py  chunking.py  cli.py  config.py  data_loader.py  embeddings.py  evaluation.py  llm.py  logging_utils.py  rag_chain.py  vector_store.py
src/rag_mapreduce.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rag_mapreduce/pipelines/: base.py  mapreduce.py  mapreduce2.py  sequential.py
tests/: test_config.py
